<resources>
    <string name="app_name">Расписание универ</string>
    <string name="week1">Числитель</string>
    <string name="week2">Знаменатель</string>
    <string name="calendar">Календарь</string>


    <string name="setting">Настройки</string>
    <string name="edit">Редактор</string>
    <string name="about">О программе</string>

    <string name="chkBoxSetting">Первая неделя четная/не четная</string>

    <string name="setTextSize">Размер шрифта</string>
    <string name="setTextSizeVal">Выбрать размер шрифта</string>
    <string name="setTimeSize">Время</string>
    <string name="setTimeSizeVal">Выбрать размер шрифта времени</string>
    <string name="setPredmetSize">Предмет</string>
    <string name="setPredmetSizeVal">Выбрать размер шрифта предмета</string>
    <string name="setKabSize">Кабинет</string>
    <string name="setKabSizeVal">Выбрать размер шрифта кабинета</string>
    <string name="setFamSize">Преподаватель</string>
    <string name="setFamSizeVal">Выбрать размер шрифта препожавателя</string>

    <string-array name="setArrWeek">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="setArrWeekVal">
        <item>1 - четная</item>
        <item>1 - нечетная</item>
    </string-array>

    <string-array name="setArrTextSize">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>
    <string name="title_activity_calendar">Календарь</string>
    <string name="title_activity_edit">Редактор пар</string>

    <string name="chetn1">Не четная - числитель(1)</string>
    <string name="nechetn1">Четная - знаменатель(2)</string>

    <string name="chetn2">Четная - числитель(1)</string>
    <string name="nechetn2">Не четная - знаменатель(2)</string>

    <string name="mon1">ПОНЕДЕЛЬНИК (1)</string>
    <string name="tue1">ВТОРНИК (1)</string>
    <string name="wed1">СРЕДА (1)</string>
    <string name="thu1">ЧЕТВЕРГ (1)</string>
    <string name="fri1">ПЯТНИЦА (1)</string>
    <string name="sat1">СУББОТА (1)</string>

    <string name="mon2">ПОНЕДЕЛЬНИК (2)</string>
    <string name="tue2">ВТОРНИК (2)</string>
    <string name="wed2">СРЕДА (2)</string>
    <string name="thu2">ЧЕТВЕРГ (2)</string>
    <string name="fri2">ПЯТНИЦА (2)</string>
    <string name="sat2">СУББОТА (2)</string>



    --Для редактора пар--
    <string name="weeks">Числитель/Знаменатель</string>
    <string name="e_time">00:00</string>
    <string name="e_predmet">Предмет</string>
    <string name="e_fam">Преподаватель</string>
    <string name="e_kab">100</string>
    <string name="mo">ПН</string>
    <string name="tu">ВТ</string>
    <string name="we">СР</string>
    <string name="th">ЧТ</string>
    <string name="fr">ПТ</string>
    <string name="sa">СБ</string>
    <string name="save">Сохранить</string>
    <string name="close">Закрыть</string>
    <string name="onBackPressed">Нажмите снова для возвращения.</string>





</resources>
