<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.dimka.myunivertable.EditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/weeks" />

                <CheckBox
                    android:id="@+id/chkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true" />

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p1_time_start"
                        style="@style/Text.Time"
                        android:ems="3"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p1_predmet"
                        style="@style/Text.Predmet"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_predmet"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/p1_kab"
                        style="@style/Text.Kab"
                        android:ems="3"
                        android:hint="@string/e_kab"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p1_time_finish"
                        style="@style/Text.Time"
                        android:ems="2"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p1_fam"
                        style="@style/Text.Fam"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_fam"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p2_time_start"
                        style="@style/Text.Time"
                        android:ems="2"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p2_predmet"
                        style="@style/Text.Predmet"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_predmet"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/p2_kab"
                        style="@style/Text.Kab"
                        android:ems="2"
                        android:hint="@string/e_kab"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p2_time_finish"
                        style="@style/Text.Time"
                        android:ems="2"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p2_fam"
                        style="@style/Text.Fam"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_fam"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p3_time_start"
                        style="@style/Text.Time"
                        android:ems="2"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p3_predmet"
                        style="@style/Text.Predmet"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_predmet"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/p3_kab"
                        style="@style/Text.Kab"
                        android:ems="2"
                        android:hint="@string/e_kab"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p3_time_finish"
                        style="@style/Text.Time"
                        android:ems="2"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p3_fam"
                        style="@style/Text.Fam"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_fam"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p4_time_start"
                        style="@style/Text.Time"
                        android:ems="2"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p4_predmet"
                        style="@style/Text.Predmet"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_predmet"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/p4_kab"
                        style="@style/Text.Kab"
                        android:ems="2"
                        android:hint="@string/e_kab"
                        android:inputType="number" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/p4_time_finish"
                        style="@style/Text.Time"
                        android:ems="2"
                        android:hint="@string/e_time"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/p4_fam"
                        style="@style/Text.Fam"
                        android:ems="8"
                        android:gravity="start"
                        android:hint="@string/e_fam"
                        android:inputType="textPersonName" />

                </TableRow>


            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        style="?android:attr/buttonBarStyle"
                        android:id="@+id/mon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@drawable/button_selector"
                        android:text="@string/mo"
                        tools:ignore="ButtonStyle" />

                    <Button
                        style="?android:attr/buttonBarStyle"
                        android:id="@+id/tue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@drawable/button_selector"
                        android:text="@string/tu"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/wed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@drawable/button_selector"
                        android:text="@string/we"
                        style="?android:attr/buttonBarStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/thu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@drawable/button_selector"
                        android:text="@string/th"
                        style="?android:attr/buttonBarStyle"/>

                    <Button
                        android:id="@+id/fri"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@drawable/button_selector"
                        android:text="@string/fr"
                        style="?android:attr/buttonBarStyle"/>

                    <Button
                        android:id="@+id/sat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:background="@drawable/button_selector"
                        android:text="@string/sa"
                        style="?android:attr/buttonBarStyle"/>
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6pt"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/close"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:text="@string/close" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
